compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__assert__bool_literal.snap
---
source: compiler-core/src/type_/tests/assert.rs
expression: "\npub fn main() {\n  assert True\n}\n"
---
----- SOURCE CODE

pub fn main() {
  assert True
}


----- WARNING
warning: Assertion of a literal value
  ┌─ /src/warning/wrn.gleam:3:10
  │
3 │   assert True
  │          ^^^^ This is always the same

Asserting that a literal value is redundant since you can already tell
whether it will be true or false.
