compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__assert__equality_check_on_literals.snap
---
source: compiler-core/src/type_/tests/assert.rs
assertion_line: 76
expression: "\npub fn main() {\n  assert 1 == 2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  assert 1 == 2
}


----- WARNING
warning: Assertion of a literal value
  ┌─ /src/warning/wrn.gleam:3:10
  │
3 │   assert 1 == 2
  │          ^^^^^^ This is always the same

Asserting that a literal value is redundant since you can already tell
whether it will be true or false.
