compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__assert__negation_of_bool_literal.snap
---
source: compiler-core/src/type_/tests/assert.rs
expression: "\npub fn main() {\n  assert !False\n}\n"
---
----- SOURCE CODE

pub fn main() {
  assert !False
}


----- WARNING
warning: Assertion of a literal value
  ┌─ /src/warning/wrn.gleam:3:10
  │
3 │   assert !False
  │          ^^^^^^

Asserting on a literal Boolean is redundant since you can already tell
whether it will be True or False.
